--- a/Quest01/skeleton/index.html
+++ b/Quest01/skeleton/index.html
@@ -3,18 +3,95 @@
 	<head>
 		<meta charset="UTF-8">
 		<!-- TODO: 또 무엇이 필요할까요? -->
+		<title>NAVER</title>
 	</head>
 	<body>
 		<header>
 			<!-- TODO: 어디까지를 header로 보는 것이 좋을까요? -->
+			<div>
+				<a href=""><h1>NAVER</h1></a>
+				<input type="search" placeholder="검색어를 입력해주세요.">
+			</div>
 		</header>
 
-		<section class="main">
+		<nav class="main">
 			<!-- TODO: main은 어떤 식으로 나눌 수 있을까요? -->
+			<nav>
+				<ul>
+					<li><a href="#">뉴스판</a></li>
+					<li><a href="#">경제지표판</a></li>
+					<li><a href="#">연예판</a></li>
+					<li><a href="#">트렌드판</a></li>
+				</ul>
+				<ul>
+					<li><a href="#">메일</a></li>
+					<li><a href="#">카페</a></li>
+					<li><a href="#">블로그</a></li>
+					<li><a href="#">...</a></li>
+				</ul>
+			</nav>
+		</section>
+		<section class="">
+			<a href="날씨"></a>
+		</section>
+		<section>
+			날씨 정보
+		</section>
+		<section>
+			<p>
+				<b>코로나19</b>
+				<br>국내외 확진 현황 / <b>코로나19 팩트체크</b>
+				<br>백신 정보 팩트는?
+			</p>
+		</section>
+		<section>
+			<p>
+				제 102주년 <b>대한민국 임시정부 수립일</b>
+			</p>
+		</section>
+		<section>
+			<p>
+				앱으로 <b>새로운 네이버</b>를 더 쾌적하게 사용해 보세요.
+			</p>
+		</section>
+		<section>
+			<p>
+				<b>웹툰</b>
+			</p>
+		</section>
+		<section>
+			<p>
+				<b>인기 주제 판을 확인해 보세요!</b>
+			</p>
+				<nav>
+					<ul>
+						<li><a href="#">영화판</a></li>
+						<li><a href="#">뿜판</a></li>
+						<li><a href="#">웹툰판</a></li>
+						<li><a href="#">경제M판</a></li>
+					</ul>
+				</nav>
+		</section>
+		<section>
+			<p>
+				네이버앱 업데이트 사전 안내
+			</p>
 		</section>
 
 		<footer>
 			<!-- TODO: 하단의 여러 가지 링크들은 어떻게 처리하면 좋을까요? -->
+			<div id="bottonMenu">
+				<ul>
+					<li><a href="#">로그인</a></li>
+					<li><a href="#">전체서비스</a></li>
+					<li><a href="#">PC버전</a></li>
+				</ul>
+				<ul>
+					<li><a href="#">이용약관</a></li>
+					<li><a href="#"><b>개인정보처리방침</b></a></li>
+					<li><a href="#">고객센터</a></li>
+				</ul>
+			</div>
 		</footer>
 	</body>
 </html>
