--- a/Quest01/skeleton/index.html
+++ b/Quest01/skeleton/index.html
@@ -13,7 +13,7 @@
 				<input type="search" placeholder="검색어를 입력해주세요.">
 			</div>
 		</header>
-
+	<section>
 		<nav class="main">
 			<!-- TODO: main은 어떤 식으로 나눌 수 있을까요? -->
 			<nav>
