--- a/Quest03/skeleton/quest.html
+++ b/Quest03/skeleton/quest.html
@@ -1,47 +1,73 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<style>
-			.square {
-				width: 100px;
-				height: 100px;
-				border: 1px dashed black;
-				display: inline-block;
-				margin: 20px;
-			}
+  <head>
+    <meta charset="UTF-8" />
+    <style>
+      .square {
+        width: 100px;
+        height: 100px;
+        border: 1px dashed black;
+        display: inline-block;
+        margin: 20px;
+      }
 
-			.enabled {
-				background-color: limegreen;
-				border: 1px solid black;
-			}
-		</style>
-	</head>
-	<body>
-		<section class="row1">
-			<div class="square"></div>
-			<div class="square"></div>
-			<div class="square"></div>
-			<div class="square"></div>
-		</section>
+      .enabled {
+        background-color: limegreen;
+        border: 1px solid black;
+      }
+    </style>
+  </head>
+  <body>
+    <section class="row1">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+    </section>
 
-		<section class="row2">
-			<div class="square"></div>
-			<div class="square"></div>
-			<div class="square"></div>
-			<div class="square"></div>
-		</section>
+    <section class="row2">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+    </section>
 
-		<script>
-			let row1Squares = document.querySelectorAll('.row1 .square');
-			for(let node of row1Squares) {
-				/* TODO: node 변수를 어떻게 조작해야 할까요? */
-			}
+    <script>
+      const linecount = prompt()
 
-			let row2Squares = document.querySelectorAll('.row2 .square');
-			for(let node of row2Squares) {
-				/* TODO: node 변수를 어떻게 조작해야 할까요? */
-			}
-		</script>
-	</body>
+      let star = ''
+
+      for (let i = 1; i <= linecount; i++) {
+        for (let k = 1; k <= linecount - i; k++) {
+          star = star + ' '
+        }
+        for (let j = 1; j <= i * 2 - 1; j++) {
+          star = star + '*'
+        }
+        star += '\n'
+      }
+      console.log(star)
+
+      let row1Squares = document.querySelectorAll('.row1 .square')
+      for (let node of row1Squares) {
+        /* TODO: node 변수를 어떻게 조작해야 할까요? */
+        node.setAttribute('coursor', 'pointer')
+        node.addEventListener('click', function () {
+          if (node.style.backgroundColor != 'yellow')
+            node.style.backgroundColor = 'yellow'
+          else node.style.backgroundColor = 'white'
+        })
+      }
+
+      let row2Squares = document.querySelectorAll('.row2 .square')
+      for (let node of row2Squares) {
+        /* TODO: node 변수를 어떻게 조작해야 할까요? */
+        node.setAttribute('coursor', 'pointer')
+        node.addEventListener('click', function () {
+          if (!node.classList.contains('enabled')) node.classList.add('enabled')
+          else node.classList.remove('enabled')
+        })
+      }
+    </script>
+  </body>
 </html>
